--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,6 +28,6 @@ jobs:
     - name: Build an Artifact
       uses: actions/upload-artifact@v2
       with:
-        path: npm
+        path: package-lock.json
     - name: Download a Build Artifact
       uses: actions/download-artifact@v3.0.0
