--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,6 +28,9 @@ jobs:
     - name: Build an Artifact
       uses: actions/upload-artifact@v2
       with:
-        path: package-lock.json
+          path: |
+                **/*
+                !.github/**/*
+                !node_modules/**/*
     - name: Download a Build Artifact
       uses: actions/download-artifact@v3.0.0
