--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,7 +30,7 @@ jobs:
       with:
           path: |
                 **/*
-                !.github/**/*
+                !.git/**/*
                 !node_modules/**/*
     - name: Download a Build Artifact
       uses: actions/download-artifact@v3.0.0
