--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,6 +31,7 @@ jobs:
           path: |
                 **/*
                 !.git/**/*
+                !.github/**/*
                 !node_modules/**/*
     - name: Download a Build Artifact
       uses: actions/download-artifact@v3.0.0
