Exclude spec, .git, .github from artifact

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,6 +32,5 @@ jobs:
                 **/*
                 !.git/**/*
                 !.github/**/*
-                !node_modules/**/*
-    - name: Download a Build Artifact
-      uses: actions/download-artifact@v3.0.0
+                !spec/**/*
+
