--- a/azure-test-jasmine-pipeline.yml
+++ b/azure-test-jasmine-pipeline.yml
@@ -12,19 +12,17 @@ steps:
 
 - script: |
     npm install
-    npm install jasmine-trx-reporter
     npm run build
-    npm run test
+
   displayName: 'npm install test and  build'
 
+- script: npm run test
 - task: PublishTestResults@2
   inputs:
-    testResultsFormat: 'VSTest'
     testResultsFiles: '**/*.trx'
-    searchFolder: '$(Pipeline.Workspace)'
-    testRunTitle: 'Tests'
 
+# this code takes all the files in $(Build.ArtifactStagingDirectory) and uploads them as an artifact of your build.
 - task: PublishPipelineArtifact@1
   inputs:
-    targetPath: '$(Pipeline.Workspace)'
-    publishLocation: 'pipeline'
+    targetPath: test_results
+    artifactName: 'test-results'
